Insta Link added

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <div class="head-nav">
                     <ul class="primary-menu">
                         <li><a href="">Home</a></li>
-                        <li><a href="">About me</a></li>
+                        <li><a href="#about">About me</a></li>
                         <li><a href="">Skills</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="">Blog</a></li>
-                        <li><a href="">Instagram</a></li>
+                        <li><a href="#instagram">Instagram</a></li>
                     </ul>
                     <div class="head-btn">
                         <i class="fas fa-bars"></i>
@@ -104,7 +104,7 @@
                     </div>
                 </section>
                 <section id="gallery animate-up animated" class="section">
-                    <h2 class="section-title">Check My Instagram</h2>
+                    <h2 id="instagram" class="section-title">Check My Instagram</h2>
                     <div id="instafeed-container" class="insta-gallery section-box"></div>
                 </section>
             </div>
