--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         <div class="row">
                             <div class="left col-sm-5">
                                 <div class="profile-photo">
-                                    <img src="./img/pic2.jpg" alt="">
-                                    <img class="photo-hover" src="./img/pic1.jpg" alt="">
+                                    <img src="./img/pic2.jpg" alt="Sakar Aryal">
+                                    <img class="photo-hover" src="./img/pic1.jpg" alt="Sakar Aryal">
                                 </div>
                             </div>
                             <div class="right col-sm-7">
