--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kwesforms.com/v2/kwes-script.js" defer></script>
 </head>
+
 <body class="home header-has-img">
     <div class="wrapper">
         <header class="header">
@@ -121,6 +124,14 @@
             });
             userFeed.run();
         </script>
+        <section id="contact">
+            <form class="kwes-form" action="https://kwesforms.com/api/foreign/forms/ExS2RPuyaX5CuHevsdNT">
+                <label for="name">Your Name</label>
+                <input type="text" name="name" rules="required|max:255">
+                <button type="submit">Submit</button>
+            </form> 
+
+        </section>
         <footer class="footer"></footer>
     </div>
 
