--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="row">
                             <div class="left col-sm-5">
                                 <div class="profile-photo">
-                                    <img src="./img/sakar_aryal2.JPG.JPG" alt="Sakar Aryal">
+                                    <img src="./img/sakar_aryal2.JPG" alt="Sakar Aryal">
                                     <img class="photo-hover" src="./img/sakar_aryal1.JPG" alt="Sakar Aryal">
                                 </div>
                             </div>
