One Time Animation Added

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <section id="about" class="section section-about">
                     <div class="section-profile">
                         <div class="row">
-                            <div data-aos="fade-right" class="left col-sm-5">
+                            <div data-aos-once="true" data-aos="fade-right" class="left col-sm-5">
                                 <div class="profile-photo">
                                     <img src="./img/sakar_aryal2.JPG" alt="Sakar Aryal">
                                     <img class="photo-hover" src="./img/sakar_aryal1.JPG" alt="Sakar Aryal">
                                 </div>
                             </div>
-                            <div data-aos="fade-left" class="right col-sm-7">
+                            <div data-aos-once="true" data-aos="fade-left" class="right col-sm-7">
                                 <div class="profile-info">
                                     <div class="profile-items clearfix">
                                         <div class="profile-preword"><span>Cheers</span></div>
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section-about-text"  data-aos="fade-up">
+                    <div class="section-about-text"     data-aos-once="true"  data-aos="fade-up">
                         <p><a href="" class="btn btn-large ripple btn-border">Download Resume</a></p>
                         <p>Cheers! I’m Sakar. I am studying a Bachelor’s degree in Computer Application.
                             I loves coding and blogging. My blogs mostly focused on problem solving technique specially
@@ -120,7 +120,7 @@
                 <section class="section contact" id="contact">
 
 
-                    <div  data-aos="fade-right" style="min-height: 607px;" class="section-box col-sm-6">
+                    <div data-aos-once="true" data-aos="fade-right" style="min-height: 607px;" class="section-box col-sm-6">
 
                         <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
                             <div class="form-group name">
@@ -151,7 +151,7 @@
                             </div>
                         </form>
                     </div>
-                    <div  data-aos="fade-left" style="min-height: 607px;" class="section-box col-sm-6"></div>
+                    <div data-aos-once="true" data-aos="fade-left" style="min-height: 607px;" class="section-box col-sm-6"></div>
 
                 </section>
             </div>
