Animation changed for contact

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </a>
                 </div>
                 <div class="head-nav">
-                    <ul class="primary-menu">
+                    <ul class="primary-menu hide-on-mobile">
                         <li><a href="">Home</a></li>
                         <li><a href="#about">About me</a></li>
                         <li><a href="">Skills</a></li>
@@ -113,7 +113,7 @@
                 <section class="section contact" id="contact">
 
 
-                    <div data-aos-once="true" data-aos="fade-right" style="min-height: 607px;" class="section-box col-sm-6">
+                    <div data-aos-once="true" data-aos="fade-up" style="min-height: 607px;" class="section-box col-sm-6">
 
                         <form name="contact" method="POST" data-netlify-recaptcha="true" data-netlify="true">
                             <div class="form-group name">
@@ -144,7 +144,7 @@
                             </div>
                         </form>
                     </div>
-                    <div data-aos-once="true" data-aos="fade-left" style="min-height: 607px;" class="section-box col-sm-6"></div>
+                    <div data-aos-once="true" data-aos="fade-down" style="min-height: 607px;" class="section-box col-sm-6"></div>
 
                 </section>
             </div>
